plugins {
    id 'java'
}

group 'org.nicoverali'
version '1.0'

repositories {
    mavenCentral()
}

compileJava {
    sourceCompatibility = '11'
    targetCompatibility = '11'
}

test {
    useJUnitPlatform()
}

dependencies {

    testImplementation 'org.mockito:mockito-core:3.12.4'
    testImplementation 'org.mockito:mockito-junit-jupiter:3.12.4'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'

}
